# cocos2d-haskell

./: .gitignore  Makefile  README.md  cocos2d-haskell.cabal
examples/: Makefile
examples/HelloWorld/: .Main.hs.swp  Main.hs
examples/tests/: ActionManagerTest.hs  ActionsTest.hs  Main.hs  MainMenu.hs  MainMenu.hs-boot  Makefile  Resources.hs  RunTestCase.hs  TestCase.hs  Tests.hs  boot.js  index.html
javascript/: .cocos2d-haskell.js.swp  cocos2d-haskell.js
src/: Makefile
src/Graphics/: Cocos2d-ffi.hs  Makefile  ffiConverts
src/Graphics/Cocos2d/: .Cocos2d-ffi.hs.swp  Action-ffi.hs  Animation-ffi.hs  Cocos2d-ffi.hs  Label-ffi.hs  Layer-ffi.hs  Makefile  Menu-ffi.hs  Node-ffi.hs  Scene-ffi.hs  Sprite-ffi.hs  TouchDelegate-ffi.hs  Utils-ffi.hs
